--- a/888repair/Views/Login/LoginIndex.cshtml
+++ b/888repair/Views/Login/LoginIndex.cshtml
@@ -17,7 +17,7 @@
     <div class="layui-layout layui-layout-admin">
         <div class="layui-header">
             <!-- 头部区域（可配合layui 已有的水平导航） -->
-            <ul class="layui-nav" lay-filter="layadmin-layout-right">
+            @*<ul class="layui-nav" lay-filter="layadmin-layout-right">
 
                 <li class="layui-nav-item layui-btn-warm" lay-unselect style="margin-left:1300px">
                     <a href="javascript:;">
@@ -28,14 +28,12 @@
                         <dd onclick="changeLanguage('en')"><a>English</a></dd>
                     </dl>
                 </li>
-            </ul>
+            </ul>*@
             <ul class="layui-nav layui-layout-left">
                 <!-- 移动端显示 -->
-                <li class="layui-nav-item layui-show-xs-inline-block layui-hide-sm" lay-header-event="menuLeft">
-                    <i class="layui-icon layui-icon-spread-left"></i>
-                </li>
-                <li class="layui-logo layui-hide-xs layui-bg-black" style="font-family:'Agency FB';font-size:large;" language="sysname">
-                    <a>昆山康桥学校-报修系统(北)</a>
+             
+                <li style="padding-top:5%">
+                    <a style="font-family:Cambria;font-size:x-large;color:white;width:100%">昆山康桥学校-报修系统(北)</a>
                 </li>
             </ul>
 
@@ -72,14 +70,18 @@
                     <br />
                     <button type="button" style="color:purple;margin-left:110px" id="btn_login">登录 Login</button>
                     <br /><br /><br />
-                    <div id="myDiv">        
-                        <p style="color:purple">UserName and PassWord are the boot account password! (账号、密码为开机账号密码！)<br /></p>
+                    <div id="myDiv">
+                        <p style="color:grey">UserName and PassWord are the boot account password! (账号、密码为开机账号密码！)<br /></p>
                     </div>
 
                 </div>
-                <p>
-                </p>
+                <br /> <br /> <br /> <br />
+                <div style="padding-left:80%; width:20%;height:120px;">
+                    <img src="~/src/phoneLink.png" style="width:120px;height:120px" />
+                    <p style="font-family:Cambria;font-weight:800">手机版/For Phone</p>
+                </div>
             </div>
+           
         </div>
     </div>
 </body>
@@ -93,15 +95,15 @@
             , $ = layui.$;
     });
 
-    var language = localStorage.getItem('language');
-    for (let key in languageMap) {
-        if (key === language) {
-            document.querySelector('#languageStatus').innerText = languageMap[key].description;
-            break;
-        }
-    }
-    setLanguage();
-    setTimeout(() => { setLanguage(); }, 300)
+    //var language = localStorage.getItem('language');
+    //for (let key in languageMap) {
+    //    if (key === language) {
+    //        document.querySelector('#languageStatus').innerText = languageMap[key].description;
+    //        break;
+    //    }
+    //}
+    //setLanguage();
+    //setTimeout(() => { setLanguage(); }, 300)
 
     let timerId;
     const myDiv = document.getElementById('myDiv');
