--- a/888repair/src/css/layui.css
+++ b/888repair/src/css/layui.css
@@ -260,7 +260,7 @@ a cite{font-style: normal; *cursor:pointer;}
 
 /* 后台框架大布局 */
 .layui-layout-body{overflow-x: hidden;}
-.layui-layout-admin .layui-header{position: fixed; top: 0; left: 0; right: 0; background-color: #23262E;}
+.layui-layout-admin .layui-header{position: fixed; top: 0; left: 0; right: 0; background-color:  #cc6699;}
 .layui-layout-admin .layui-side{top: 60px; width: 200px; overflow-x: hidden;}
 .layui-layout-admin .layui-body{position: absolute; top: 60px; padding-bottom: 44px;}
 .layui-layout-admin .layui-main{width: auto; margin: 0 15px;}
