--- a/888repair/Views/Home/Index.cshtml
+++ b/888repair/Views/Home/Index.cshtml
@@ -257,7 +257,7 @@
                 dataType: "json",
                 success: function (result) {
                     if (result.IsSuccess) {
-                         var url = url = '@Url.Action("LoginIndex", "Login")';
+                         var url = '@Url.Action("LoginIndex", "Login")';
                          window.location.href = url;
                     } else
                     {
