--- a/888repair/Views/Login/LoginIndex.cshtml
+++ b/888repair/Views/Login/LoginIndex.cshtml
@@ -11,7 +11,7 @@
     </title>
     <link rel="stylesheet" href="~/src/css/layui.css">
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
-    <script src="~/src/language/index.js"></script>
+    @*<script src="~/src/language/index.js"></script>*@
 </head>
 <body>
     <div class="layui-layout layui-layout-admin">
