--- a/888repair/Views/Home/Index.cshtml
+++ b/888repair/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
             </ul>
         </div>
 
-        <div class="layui-side layui-bg-black">
+        <div class="layui-side layui-bg-black" id="leftmenu">
             <div class="layui-side-scroll">
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
                 <ul class="layui-nav layui-nav-tree Menu" lay-filter="test" id="Menu">
@@ -124,11 +124,17 @@
         $('#listProblem').hide();
         $('#replyProblem').hide();
         $('#ProblemRepair').hide();
-
+        
         var logusername = '@(Session["fullname"])';
         var logempno = '@(Session["EmpNo"])';
         var logmanager = '@(Session["Manager"])';
         var logviewer = '@(Session["Viewer"])';
+
+        if (logusername == "") {
+            $('#leftmenu').hide();
+        } else {
+            $('#leftmenu').show();
+        }
 
        // alert(logusername);
         $("#username").html(logusername == "" ? "未登录" : logusername);
@@ -149,6 +155,17 @@
 
         if (logviewer == "1") {
             $('#listProblem').show();
+        }
+
+        if (!(navigator.userAgent.match(/(phone|pad|pod|mobile|ios|android|BlackBerry|MQQBrowser|JUC|Fennec|wOSBrowser|BrowserNG|WebOS|symbian|transcoder)/i))) {
+            url = '@Url.Action("Index", "Home")';
+            window.location.href = url;
+        }
+        else
+        {
+            alert("移动端开发中,请PC端登录");
+            url = '@Url.Action("LoginIndex", "Login")';
+            window.location.href = url;
         }
 
         $.ajax({
@@ -257,7 +274,8 @@
                 dataType: "json",
                 success: function (result) {
                     if (result.IsSuccess) {
-                         var url = '@Url.Action("LoginIndex", "Login")';
+                        var url = '@Url.Action("LoginIndex", "Login")';
+                        alert(url);
                          window.location.href = url;
                     } else
                     {
