--- a/888repair/Views/Repair/RersonalProblemIndex.cshtml
+++ b/888repair/Views/Repair/RersonalProblemIndex.cshtml
@@ -241,7 +241,7 @@
         function loadOption() {
             $("#Status").empty();
             $.ajax({
-                url: "@(Url.Action("getStatus", "DDL"))",
+                url: "@(Url.Action("getStatusEvery", "DDL"))",
                 type: "POST",
                 dataType: 'json',
                 success: function (result) {
@@ -269,7 +269,7 @@
             } else {
                 $.ajax({
                     type: "post",
-                     url: "@(Url.Action("getStatus", "DDL"))",
+                     url: "@(Url.Action("getStatusEvery", "DDL"))",
                     data: { "keyWord": SystemCategory },
                     dataType: "json",
                     success: function (result) {
