--- a/888repair/Views/Area/AreaIndex.cshtml
+++ b/888repair/Views/Area/AreaIndex.cshtml
@@ -27,10 +27,10 @@
                 <div class="layui-input-inline">
                     <select ID="SystemCategory" name="SystemCategory">
                         <option value=""></option>
-                        <option value="IT(资讯类)">IT(资讯类)</option>
+                        @*<option value="IT(资讯类)">IT(资讯类)</option>
                         <option value="Logistics(总务后勤类)">
                             Logistics(总务后勤类)
-                        </option>
+                        </option>*@
                     </select>
                 </div>
             </div>
@@ -68,10 +68,10 @@
             <div class="layui-input-block" style="height:38px;width:300px">
                 <select ID="addSystemCategory" name="addSystemCategory" lay-verify="required">
                     <option value=""></option>
-                    <option value="IT(资讯类)">IT(资讯类)</option>
+                    @*<option value="IT(资讯类)">IT(资讯类)</option>
                     <option value="Logistics(总务后勤类)">
                         Logistics(总务后勤类)
-                    </option>
+                    </option>*@
                 </select>
             </div>
         </div>
@@ -100,6 +100,20 @@
         var form = layui.form;
 
         render();
+
+        var logGroupName = '@(Session["GroupName"])'
+        if (logGroupName == "资讯") {
+            $("#SystemCategory").append(`<option value="IT(资讯类)">IT(资讯类)</option>`);
+            $("#addSystemCategory").append(`<option value="IT(资讯类)">IT(资讯类)</option>`);
+        } else if (logGroupName == "后勤") {
+            $("#SystemCategory").append(`<option value="Logistics(总务后勤类)">Logistics(总务后勤类)</option>`);
+            $("#addSystemCategory").append(`<option value="Logistics(总务后勤类)">Logistics(总务后勤类)</option>`);
+        } else if (logGroupName == "管理者") {
+            $("#SystemCategory").append(`<option value="IT(资讯类)">IT(资讯类)</option>`);
+            $("#SystemCategory").append(`<option value="Logistics(总务后勤类)">Logistics(总务后勤类)</option>`);
+            $("#addSystemCategory").append(`<option value="IT(资讯类)">IT(资讯类)</option>`);
+            $("#addSystemCategory").append(`<option value="Logistics(总务后勤类)">Logistics(总务后勤类)</option>`);
+        }
 
         form.on('submit(demo1)', function (data) {
 
