--- a/888repair/Views/Director/DirectorIndex.cshtml
+++ b/888repair/Views/Director/DirectorIndex.cshtml
@@ -24,10 +24,10 @@
                 <div class="layui-input-inline">
                     <select ID="SystemCategory" name="SystemCategory">
                         <option value=""></option>
-                        <option value="IT(资讯类)">IT(资讯类)</option>
+                        @*<option value="IT(资讯类)">IT(资讯类)</option>
                         <option value="Logistics(总务后勤类)">
                             Logistics(总务后勤类)
-                        </option>
+                        </option>*@
                     </select>
                 </div>
             </div>
@@ -59,10 +59,10 @@
             <div class="layui-input-inline">
                 <select ID="addSystemCategory" name="addSystemCategory" lay-filter="addSystemCategory" lay-verify="required">
                     <option value=""></option>
-                    <option value="IT(资讯类)">IT(资讯类)</option>
+                    @*<option value="IT(资讯类)">IT(资讯类)</option>
                     <option value="Logistics(总务后勤类)">
                         Logistics(总务后勤类)
-                    </option>
+                    </option>*@
                 </select>
             </div>
         <div class="layui-inline">
@@ -87,6 +87,20 @@
         var table = layui.table;
 
         render();
+
+        var logGroupName = '@(Session["GroupName"])'
+        if (logGroupName == "资讯") {
+            $("#SystemCategory").append(`<option value="IT(资讯类)">IT(资讯类)</option>`);
+            $("#addSystemCategory").append(`<option value="IT(资讯类)">IT(资讯类)</option>`);
+        } else if (logGroupName == "后勤") {
+            $("#SystemCategory").append(`<option value="Logistics(总务后勤类)">Logistics(总务后勤类)</option>`);
+            $("#addSystemCategory").append(`<option value="Logistics(总务后勤类)">Logistics(总务后勤类)</option>`);
+        } else if (logGroupName == "管理者") {
+            $("#SystemCategory").append(`<option value="IT(资讯类)">IT(资讯类)</option>`);
+            $("#SystemCategory").append(`<option value="Logistics(总务后勤类)">Logistics(总务后勤类)</option>`);
+            $("#addSystemCategory").append(`<option value="IT(资讯类)">IT(资讯类)</option>`);
+            $("#addSystemCategory").append(`<option value="Logistics(总务后勤类)">Logistics(总务后勤类)</option>`);
+        }
 
         $.ajax({
             url: "@(Url.Action("getDirectorList", "Director"))",  // 要提交的URL路径
