调整移动端上传图片不限制图片大小，显示图片名

--- a/888repair/Views/Login/LoginIndex.cshtml
+++ b/888repair/Views/Login/LoginIndex.cshtml
@@ -56,9 +56,9 @@
             </ul>
         </div>
 
-        <div class="layui-body" style="margin-bottom:100px" hidden="hidden">
+        <div class="layui-body" style="margin-bottom:100px"  id="PC"  hidden="hidden">
             <!-- 内容主体区域 -->
-            <div style="padding: 15%;" id="PC">
+            <div style="padding: 15%;">
                 <form style="margin-left:150px">
                     <div style="color:purple">
                         <span>Domain Name:	&nbsp;&nbsp;&nbsp;</span>
